# webprogquiz

g14_practical/: .env  .gitignore  Cargo.toml  README.txt  bugs.db  bugtrack.db  db.sqlite-shm  db.sqlite-wal  schema.sql
g14_practical/migrations/: 20250704015032_init.sql
g14_practical/src/: auth.rs  database.rs  handlers.rs  main.rs  models.rs  state.rs  utils.rs
