[package]
name = "g14_practical"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.3"
actix-web-httpauth = "0.7"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "macros", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
jsonwebtoken = "8"
sha2 = "0.10"
hex = "0.4"
once_cell = "1.17"
env_logger = "0.10"
log = "0.4"